--- a/src/main/resources/view/AdminDashboardForm.fxml
+++ b/src/main/resources/view/AdminDashboardForm.fxml
@@ -1,173 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="800.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.AdminLoginFormController">
+<AnchorPane fx:id="adminDashboardContent" prefHeight="800.0" prefWidth="1026.0" style="-fx-background-color: #dfe4ea;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.AdminDashboardFormController">
    <children>
-      <AnchorPane prefHeight="800.0" prefWidth="274.0" style="-fx-background-color: white;">
+      <AnchorPane fx:id="adminDashboardHeadingPane" layoutX="30.0" layoutY="2.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
          <children>
-            <Label layoutX="74.0" layoutY="50.0" prefHeight="53.0" prefWidth="177.0" text="RDF Car Rentals">
+            <Label alignment="CENTER" layoutX="354.0" layoutY="31.0" prefHeight="41.0" prefWidth="108.0" text="Dashboard" textFill="#ffc029">
                <font>
-                  <Font name="System Bold" size="20.0" />
+                  <Font size="17.0" />
                </font>
             </Label>
-            <VBox layoutX="90.0" layoutY="123.0" prefHeight="651.0" prefWidth="140.0">
-               <children>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Dashboard" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Cars" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Drivers" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Customers" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Sales" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Buys" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Reservations" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Payments" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Credits" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Repairs" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Cashiers" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Reports" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Logout" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-               </children>
-            </VBox>
-            <FontAwesomeIcon fill="#636e72" iconName="DASHBOARD" layoutX="49.0" layoutY="159.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="CAR" layoutX="46.0" layoutY="204.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="SLIDESHARE" layoutX="48.0" layoutY="295.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="CART_PLUS" layoutX="48.0" layoutY="433.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="SIGN_OUT" layoutX="53.0" layoutY="701.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="CREDIT_CARD" layoutX="50.0" layoutY="518.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="CC" layoutX="48.0" layoutY="476.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="USERS" layoutX="49.0" layoutY="610.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="MONEY" layoutX="48.0" layoutY="340.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="FILE" layoutX="53.0" layoutY="651.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" layoutX="47.0" layoutY="248.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" layoutX="49.0" layoutY="385.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" layoutX="51.0" layoutY="561.0" size="2em" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="adminDashboardContent" layoutX="274.0" prefHeight="800.0" prefWidth="1026.0" style="-fx-background-color: #dfe4ea;">
+      <AnchorPane layoutX="736.0" layoutY="613.0" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
-            <AnchorPane layoutX="30.0" layoutY="2.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
-               <children>
-                  <Label alignment="CENTER" layoutX="354.0" layoutY="31.0" prefHeight="41.0" prefWidth="108.0" text="Dashboard" textFill="#ffc029">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="736.0" layoutY="613.0" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;" />
-            <AnchorPane layoutX="30.0" layoutY="612.0" prefHeight="155.0" prefWidth="690.0" style="-fx-background-color: white; -fx-background-radius: 20;">
-               <children>
-                  <Label layoutX="26.0" layoutY="9.0" prefHeight="26.0" prefWidth="158.0" text="Top Renting Cars" textFill="#636e72">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-                  <AnchorPane layoutX="22.0" layoutY="39.0" prefHeight="102.0" prefWidth="180.0" style="-fx-background-color: #FFF8E5; -fx-background-radius: 20;" />
-                  <AnchorPane layoutX="255.0" layoutY="39.0" prefHeight="102.0" prefWidth="180.0" style="-fx-background-color: #FFF8E5; -fx-background-radius: 20;" />
-                  <AnchorPane layoutX="483.0" layoutY="39.0" prefHeight="102.0" prefWidth="180.0" style="-fx-background-color: #FFF8E5; -fx-background-radius: 20;" />
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="30.0" layoutY="132.0" prefHeight="440.0" prefWidth="690.0" style="-fx-background-color: white; -fx-background-radius: 20;">
-               <children>
-                  <BarChart layoutX="22.0" layoutY="46.0" prefHeight="374.0" prefWidth="647.0">
-                    <xAxis>
-                      <CategoryAxis side="BOTTOM" />
-                    </xAxis>
-                    <yAxis>
-                      <NumberAxis side="LEFT" />
-                    </yAxis>
-                  </BarChart>
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="736.0" layoutY="392.0" prefHeight="180.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
-               <children>
-                  <Label alignment="CENTER" layoutX="14.0" layoutY="13.0" prefHeight="45.0" prefWidth="248.0" text="Credit Not Paid" textFill="#636e72">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-                  <Label alignment="CENTER" layoutX="67.0" layoutY="125.0" prefHeight="41.0" prefWidth="158.0" text="View Details" textFill="#ffc029">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="736.0" layoutY="132.0" prefHeight="180.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
-               <children>
-                  <Label alignment="CENTER" layoutX="12.0" layoutY="23.0" prefHeight="45.0" prefWidth="248.0" text="Total Sales in This Month" textFill="#636e72">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-                  <Label alignment="CENTER" layoutX="65.0" layoutY="127.0" prefHeight="41.0" prefWidth="158.0" text="View Details" textFill="#ffc029">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
+            <Label fx:id="lblTime" alignment="CENTER" layoutX="14.0" layoutY="26.0" prefHeight="53.0" prefWidth="248.0" textFill="#ffc029">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblDate" alignment="CENTER" layoutX="14.0" layoutY="83.0" prefHeight="53.0" prefWidth="248.0" textFill="#ffc029">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="30.0" layoutY="612.0" prefHeight="155.0" prefWidth="690.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+         <children>
+            <Label layoutX="26.0" layoutY="9.0" prefHeight="26.0" prefWidth="158.0" text="Top Renting Cars" textFill="#636e72">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <AnchorPane layoutX="22.0" layoutY="39.0" prefHeight="102.0" prefWidth="180.0" style="-fx-background-color: #FFF8E5; -fx-background-radius: 20;" />
+            <AnchorPane layoutX="255.0" layoutY="39.0" prefHeight="102.0" prefWidth="180.0" style="-fx-background-color: #FFF8E5; -fx-background-radius: 20;" />
+            <AnchorPane layoutX="483.0" layoutY="39.0" prefHeight="102.0" prefWidth="180.0" style="-fx-background-color: #FFF8E5; -fx-background-radius: 20;" />
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="30.0" layoutY="132.0" prefHeight="440.0" prefWidth="690.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+         <children>
+            <BarChart layoutX="22.0" layoutY="46.0" prefHeight="374.0" prefWidth="647.0">
+               <xAxis>
+                  <CategoryAxis side="BOTTOM" />
+               </xAxis>
+               <yAxis>
+                  <NumberAxis side="LEFT" />
+               </yAxis>
+            </BarChart>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="736.0" layoutY="392.0" prefHeight="180.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+         <children>
+            <Label alignment="CENTER" layoutX="14.0" layoutY="13.0" prefHeight="45.0" prefWidth="248.0" text="Credit Not Paid" textFill="#636e72">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="67.0" layoutY="125.0" prefHeight="41.0" prefWidth="158.0" text="View Details" textFill="#ffc029">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblCreditNotPaid" alignment="CENTER" layoutX="12.0" layoutY="66.0" prefHeight="53.0" prefWidth="248.0">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="736.0" layoutY="132.0" prefHeight="180.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+         <children>
+            <Label alignment="CENTER" layoutX="12.0" layoutY="23.0" prefHeight="45.0" prefWidth="248.0" text="Total Sales in This Month" textFill="#636e72">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="65.0" layoutY="127.0" prefHeight="41.0" prefWidth="158.0" text="View Details" textFill="#ffc029">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblTotalSales" alignment="CENTER" layoutX="14.0" layoutY="73.0" prefHeight="53.0" prefWidth="248.0">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
