--- a/src/main/resources/view/CashierDashboardForm.fxml
+++ b/src/main/resources/view/CashierDashboardForm.fxml
@@ -1,103 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.CashierDashboardFormController">
+<AnchorPane fx:id="cashierDashboardContent" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1026.0" style="-fx-background-color: #dfe4ea;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.CashierDashboardFormController">
    <children>
-      <AnchorPane fx:id="cashierDashboardContent" layoutX="274.0" prefHeight="800.0" prefWidth="1026.0" style="-fx-background-color: #dfe4ea;" />
-      <AnchorPane prefHeight="800.0" prefWidth="274.0" style="-fx-background-color: white;">
-         <children>
-            <VBox layoutX="110.0" layoutY="137.0" prefHeight="467.0" prefWidth="140.0">
-               <children>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Dashboard" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Cars" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Customers" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Sales" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Reservations" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Payments" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Credits" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Repairs" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: white;" text="Logout" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-               </children>
-            </VBox>
-            <Label layoutX="80.0" layoutY="31.0" prefHeight="68.0" prefWidth="170.0" text="RDF Car Rentals">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </Label>
-            <FontAwesomeIcon fill="#636e72" iconName="CAR" layoutX="61.0" layoutY="220.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="DASHBOARD" layoutX="65.0" layoutY="170.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="SLIDESHARE" layoutX="62.0" layoutY="263.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="CC" layoutX="64.0" layoutY="396.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" layoutX="64.0" layoutY="488.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="SIGN_OUT" layoutX="67.0" layoutY="534.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="CART_PLUS" layoutX="63.0" layoutY="355.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="CREDIT_CARD" layoutX="64.0" layoutY="440.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="MONEY" layoutX="63.0" layoutY="309.0" size="2em" />
-<!--            <FontAwesomeIcon iconName="LOGOUT" layoutX="72.0" layoutY="564.0" size="2em" />-->
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="302.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
+      <AnchorPane fx:id="cashierDashboardHeadingPane" layoutX="27.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
          <children>
             <Label alignment="CENTER" layoutX="244.0" layoutY="33.0" prefHeight="37.0" prefWidth="129.0" text="Dashboard" textFill="#ffc029">
                <font>
                   <Font size="17.0" />
                </font>
             </Label>
-         </children></AnchorPane>
-      <AnchorPane layoutX="302.0" layoutY="343.0" prefHeight="418.0" prefWidth="631.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="cashierDashboardImagePane" layoutX="32.0" layoutY="343.0" prefHeight="418.0" prefWidth="631.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
             <ImageView fitHeight="374.0" fitWidth="385.0" layoutX="104.0" layoutY="22.0">
                <image>
-                  <Image url="@../../../../../../Downloads/CashierDashboard.jpeg" />
+                  <Image url="@../asserts/CashierDashboard.jpeg" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="302.0" layoutY="146.0" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+      <AnchorPane fx:id="addCustomerPane" layoutX="32.0" layoutY="146.0" onMouseClicked="#addCustomerPaneOnClicked" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
             <FontAwesomeIcon fill="#636e72" iconName="SLIDESHARE" layoutX="27.0" layoutY="103.0" size="5em" />
             <Label layoutX="111.0" layoutY="62.0" prefHeight="50.0" prefWidth="121.0" text="Add Customer" textFill="#636e72">
@@ -107,7 +37,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="655.0" layoutY="145.0" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+      <AnchorPane fx:id="makePaymentPane" layoutX="385.0" layoutY="145.0" onMouseClicked="#makePaymentPaneOnClicked" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
             <FontAwesomeIcon fill="#636e72" iconName="CREDIT_CARD" layoutX="33.0" layoutY="112.0" size="5em" />
             <Label layoutX="120.0" layoutY="64.0" prefHeight="50.0" prefWidth="121.0" text="Make Payment" textFill="#636e72">
@@ -117,7 +47,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="1009.0" layoutY="143.0" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+      <AnchorPane fx:id="makeReservationPane" layoutX="739.0" layoutY="143.0" onMouseClicked="#makeReservationPaneOnClicked" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
             <FontAwesomeIcon fill="#636e72" iconName="CART_PLUS" layoutX="33.0" layoutY="109.0" size="5em" />
             <Label layoutX="116.0" layoutY="61.0" prefHeight="50.0" prefWidth="148.0" text="Make Reservation" textFill="#636e72">
@@ -127,7 +57,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="1009.0" layoutY="343.0" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+      <AnchorPane fx:id="carListPane" layoutX="739.0" layoutY="343.0" onMouseClicked="#carListPaneOnClicked" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
             <Label layoutX="122.0" layoutY="64.0" prefHeight="50.0" prefWidth="129.0" text="Car List" textFill="#636e72">
                <font>
@@ -136,6 +66,19 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="1009.0" layoutY="606.0" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;" />
+      <AnchorPane layoutX="739.0" layoutY="606.0" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+         <children>
+            <Label fx:id="lblTime" alignment="CENTER" layoutX="14.0" layoutY="26.0" prefHeight="53.0" prefWidth="248.0" textFill="#ffc029">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblDate" alignment="CENTER" layoutX="14.0" layoutY="83.0" prefHeight="53.0" prefWidth="248.0" textFill="#ffc029">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
