--- a/src/main/resources/view/CashierLoginForm.fxml
+++ b/src/main/resources/view/CashierLoginForm.fxml
@@ -3,33 +3,50 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="cashierLoginPane" prefHeight="407.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.CashierLoginFormController">
+<AnchorPane fx:id="cashierLoginPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1300.0" style="-fx-background-color: #dfe4ea;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.CashierLoginFormController">
    <children>
-      <Label alignment="CENTER" layoutX="65.0" layoutY="25.0" prefHeight="56.0" prefWidth="273.0" text="Cashier Login">
-         <font>
-            <Font name="System Bold" size="32.0" />
-         </font>
-      </Label>
-      <Button fx:id="btnCashierLogin" layoutX="92.0" layoutY="320.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="261.0" style="-fx-background-radius: 100,100;" text="Let's Started">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Label layoutX="32.0" layoutY="127.0" prefHeight="52.0" prefWidth="145.0" text="User Name">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label layoutX="32.0" layoutY="209.0" prefHeight="52.0" prefWidth="145.0" text="Password">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <TextField fx:id="txtFldCashierUserName" layoutX="177.0" layoutY="127.0" prefHeight="52.0" prefWidth="211.0" />
-      <TextField fx:id="txtFldCashierPassword" layoutX="177.0" layoutY="209.0" prefHeight="52.0" prefWidth="211.0" />
+      <AnchorPane layoutX="206.0" layoutY="147.0" prefHeight="407.0" prefWidth="420.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+         <children>
+            <Label alignment="CENTER" layoutX="65.0" layoutY="25.0" prefHeight="56.0" prefWidth="273.0" text="Cashier Login">
+               <font>
+                  <Font name="System Bold" size="32.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnCashierLogin" layoutX="92.0" layoutY="320.0" mnemonicParsing="false" onAction="#btnCashierLoginOnAction" prefHeight="47.0" prefWidth="261.0" style="-fx-background-radius: 10; -fx-background-color: #ffc42a;" text="Let's Started" textFill="WHITE">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Button>
+            <Label layoutX="32.0" layoutY="127.0" prefHeight="52.0" prefWidth="145.0" text="User Name" textFill="#ffc42a">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
+            <Label layoutX="32.0" layoutY="209.0" prefHeight="52.0" prefWidth="145.0" text="Password" textFill="#ffc42a">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtFldCashierUserName" layoutX="177.0" layoutY="127.0" prefHeight="52.0" prefWidth="211.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="txtFldCashierPassword" layoutX="177.0" layoutY="209.0" prefHeight="52.0" prefWidth="211.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+         </children>
+      </AnchorPane>
+      <ImageView fitHeight="393.0" fitWidth="626.0" layoutX="646.0" layoutY="157.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../asserts/Login.jpg" />
+         </image></ImageView>
    </children>
 </AnchorPane>
