--- a/src/main/resources/view/PaymentsForm.fxml
+++ b/src/main/resources/view/PaymentsForm.fxml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane fx:id="paymentsContent" prefHeight="800.0" prefWidth="1026.0" style="-fx-background-color: #dfe4ea;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.PaymentsFormController">
    <children>
@@ -16,5 +22,93 @@
             </Label>
          </children>
       </AnchorPane>
+      <TableView fx:id="tblPayments" layoutX="37.0" layoutY="458.0" prefHeight="324.0" prefWidth="978.0">
+         <columns>
+            <TableColumn fx:id="colPaymentID" prefWidth="100.0" style="-fx-background-color: #ffc42a;" text="Payment ID" />
+            <TableColumn fx:id="colReservationID" prefWidth="108.0" style="-fx-background-color: #ffc42a;" text="Reservation ID" />
+            <TableColumn fx:id="colBillID" prefWidth="101.0" style="-fx-background-color: #ffc42a;" text="Bill ID" />
+            <TableColumn fx:id="colPaymentMethod" minWidth="1.0" prefWidth="153.0" style="-fx-background-color: #ffc42a;" text="Payment Method" />
+            <TableColumn fx:id="colAmount" prefWidth="138.0" style="-fx-background-color: #ffc42a;" text="Amount" />
+            <TableColumn fx:id="colDate" prefWidth="140.0" style="-fx-background-color: #ffc42a;" text="Date" />
+            <TableColumn fx:id="colTime" prefWidth="130.0" style="-fx-background-color: #ffc42a;" text="Time" />
+            <TableColumn fx:id="colOption" prefWidth="107.0" style="-fx-background-color: #ffc42a;" text="Option" />
+         </columns>
+      </TableView>
+      <AnchorPane layoutX="37.0" layoutY="129.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+         <children>
+            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Payment ID">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Payment Method">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="470.0" layoutY="148.0" prefHeight="43.0" prefWidth="81.0" text="Time">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtFldPaymentMethod" layoutX="162.0" layoutY="107.0" prefHeight="35.0" prefWidth="236.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <Button fx:id="btnAddPayment" layoutX="697.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnAddPaymentOnAction" prefHeight="40.0" prefWidth="228.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="   ADD PAYMENT" textFill="#ffc029">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnRefresh" layoutX="406.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="187.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <FontAwesomeIcon fill="#ffc029" iconName="SAVE" layoutX="716.0" layoutY="236.0" size="2em" />
+            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="433.0" layoutY="236.0" size="2em" />
+            <Label fx:id="txtFldAvailabilityStatus" layoutX="14.0" layoutY="152.0" prefHeight="43.0" prefWidth="145.0" text="Date">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="cmbBillID" layoutX="615.0" layoutY="58.0" onAction="#cmbBillIDOnAction" prefHeight="35.0" prefWidth="176.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
+            <ComboBox fx:id="cmbReservationID" layoutX="162.0" layoutY="58.0" onAction="#cmbReservationIDOnAction" prefHeight="35.0" prefWidth="167.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
+            <Label layoutX="14.0" layoutY="54.0" prefHeight="43.0" prefWidth="145.0" text="Reservation ID">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblPaymentID" layoutX="162.0" layoutY="6.0" prefHeight="43.0" prefWidth="145.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="470.0" layoutY="54.0" prefHeight="43.0" prefWidth="81.0" text="Bill ID">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="470.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Amount">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtFldAmount" layoutX="615.0" layoutY="104.0" prefHeight="35.0" prefWidth="236.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <DatePicker fx:id="txtDate" layoutX="162.0" layoutY="156.0" prefHeight="35.0" prefWidth="236.0" />
+            <DatePicker fx:id="txtTime" layoutX="615.0" layoutY="152.0" prefHeight="35.0" prefWidth="236.0" />
+         </children>
+      </AnchorPane>
+      <TextField fx:id="txtFldSearchHere" layoutX="262.0" layoutY="407.0" onKeyReleased="#txtFldSearchHereOnAction" prefHeight="35.0" prefWidth="500.0" promptText="       Search Here">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <FontAwesomeIcon fill="#c3bfbf" iconName="SEARCH" layoutX="275.0" layoutY="430.0" />
    </children>
 </AnchorPane>
