--- a/src/main/resources/view/RepairsForm.fxml
+++ b/src/main/resources/view/RepairsForm.fxml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -15,5 +22,79 @@
             </Label>
          </children>
       </AnchorPane>
+      <TableView fx:id="tblRepairs" layoutX="32.0" layoutY="447.0" prefHeight="332.0" prefWidth="976.0">
+        <columns>
+          <TableColumn fx:id="colRepairID" prefWidth="117.0" style="-fx-background-color: #ffc42a;" text="Repair ID" />
+          <TableColumn fx:id="colLicensePlateNo" prefWidth="124.0" style="-fx-background-color: #ffc42a;" text="License Plate No" />
+            <TableColumn fx:id="colDescription" prefWidth="308.0" style="-fx-background-color: #ffc42a;" text="Description" />
+            <TableColumn fx:id="colDate" prefWidth="151.0" style="-fx-background-color: #ffc42a;" text="Date" />
+            <TableColumn fx:id="colCost" prefWidth="165.0" style="-fx-background-color: #ffc42a;" text="Cost" />
+            <TableColumn fx:id="colOption" prefWidth="110.0" style="-fx-background-color: #ffc42a;" text="Option" />
+        </columns>
+      </TableView>
+      <AnchorPane layoutX="30.0" layoutY="119.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+         <children>
+            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Repair ID">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Description">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtFldDescription" layoutX="162.0" layoutY="107.0" prefHeight="35.0" prefWidth="788.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <Button fx:id="btnAddRepair" layoutX="727.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnAddRepairOnAction" prefHeight="40.0" prefWidth="228.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="   ADD REPAIR" textFill="#ffc029">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnRefresh" layoutX="497.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="187.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <FontAwesomeIcon fill="#ffc029" iconName="SAVE" layoutX="746.0" layoutY="236.0" size="2em" />
+            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="523.0" layoutY="236.0" size="2em" />
+            <Label fx:id="txtFldAvailabilityStatus" layoutX="14.0" layoutY="152.0" prefHeight="43.0" prefWidth="145.0" text="Date">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="cmbLicensePlateNo" layoutX="162.0" layoutY="58.0" onAction="#cmbLicensePlateNoOnAction" prefHeight="35.0" prefWidth="167.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
+            <Label layoutX="14.0" layoutY="54.0" prefHeight="43.0" prefWidth="145.0" text="License Plate No">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblRepairID" layoutX="162.0" layoutY="6.0" prefHeight="43.0" prefWidth="145.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="200.0" prefHeight="43.0" prefWidth="145.0" text="Cost">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtFldCost" layoutX="162.0" layoutY="204.0" prefHeight="35.0" prefWidth="236.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <DatePicker fx:id="txtDate" layoutX="162.0" layoutY="156.0" prefHeight="35.0" prefWidth="236.0" />
+         </children>
+      </AnchorPane>
+      <TextField fx:id="txtFldSearchHere" layoutX="272.0" layoutY="397.0" onKeyReleased="#txtFldSearchHereOnAction" prefHeight="35.0" prefWidth="500.0" promptText="       Search Here">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <FontAwesomeIcon fill="#c3bfbf" iconName="SEARCH" layoutX="285.0" layoutY="420.0" />
    </children>
 </AnchorPane>
