--- a/src/main/resources/view/AdminDashboardMenuForm.fxml
+++ b/src/main/resources/view/AdminDashboardMenuForm.fxml
@@ -3,6 +3,8 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -11,7 +13,7 @@
    <children>
       <AnchorPane fx:id="adminDashboardMenu" prefHeight="800.0" prefWidth="274.0" style="-fx-background-color: white;">
          <children>
-            <Label layoutX="74.0" layoutY="50.0" prefHeight="53.0" prefWidth="177.0" text="RDF Car Rentals">
+            <Label layoutX="82.0" layoutY="50.0" prefHeight="53.0" prefWidth="177.0" text="RDF Car Rentals">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -102,5 +104,10 @@
          </children>
       </AnchorPane>
       <AnchorPane fx:id="adminDashboardRightPane" layoutX="274.0" prefHeight="800.0" prefWidth="1026.0" />
+      <ImageView fitHeight="68.0" fitWidth="60.0" layoutX="14.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../asserts/CarLogo.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
