--- a/src/main/resources/view/AdminLoginForm.fxml
+++ b/src/main/resources/view/AdminLoginForm.fxml
@@ -42,6 +42,11 @@
                   <Font size="14.0" />
                </font>
             </TextField>
+            <ImageView fx:id="adminLoginBackIcon" fitHeight="52.0" fitWidth="61.0" layoutX="27.0" layoutY="26.0" onMouseClicked="#adminLoginBackIconOnAction" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../asserts/BackIcon.jpeg" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <ImageView fitHeight="415.0" fitWidth="605.0" layoutX="627.0" layoutY="137.0" pickOnBounds="true" preserveRatio="true">
