--- a/src/main/resources/view/CashierDashboardMenuForm.fxml
+++ b/src/main/resources/view/CashierDashboardMenuForm.fxml
@@ -3,6 +3,8 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -75,6 +77,11 @@
             <FontAwesomeIcon fill="#636e72" iconName="CART_PLUS" layoutX="63.0" layoutY="355.0" size="2em" />
             <FontAwesomeIcon fill="#636e72" iconName="CREDIT_CARD" layoutX="64.0" layoutY="440.0" size="2em" />
             <FontAwesomeIcon fill="#636e72" iconName="MONEY" layoutX="63.0" layoutY="309.0" size="2em" />
+            <ImageView fitHeight="68.0" fitWidth="60.0" layoutX="14.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../asserts/CarLogo.jpg" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
