--- a/src/main/resources/view/CashierLoginForm.fxml
+++ b/src/main/resources/view/CashierLoginForm.fxml
@@ -42,9 +42,14 @@
                   <Font size="14.0" />
                </font>
             </TextField>
+            <ImageView fx:id="cashierLoginBackIcon" fitHeight="52.0" fitWidth="61.0" layoutX="28.0" layoutY="26.0" onMouseClicked="#cashierLoginBackIconOnAction" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../asserts/BackIcon.jpeg" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
-      <ImageView fitHeight="393.0" fitWidth="626.0" layoutX="646.0" layoutY="157.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="415.0" fitWidth="605.0" layoutX="634.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../asserts/Login.jpg" />
          </image></ImageView>
