--- a/src/main/resources/view/CashierSignUpForm.fxml
+++ b/src/main/resources/view/CashierSignUpForm.fxml
@@ -1,14 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.rdfcarrentals.controller.CashierSignUpFormController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="cashierSignUpPane" prefHeight="800.0" prefWidth="1026.0" style="-fx-background-color: #dfe4ea;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.CashierSignUpFormController">
+   <children>
+      <AnchorPane layoutX="33.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
+         <children>
+            <Label alignment="CENTER" layoutX="375.0" layoutY="34.0" prefHeight="34.0" prefWidth="118.0" text="Cashiers" textFill="#ffc029">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <TableView fx:id="tblCashiers" layoutX="29.0" layoutY="457.0" onMouseClicked="#tblCashiersOnClicked" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
+         <columns>
+            <TableColumn fx:id="colUserName" prefWidth="160.0" text="User Name" />
+            <TableColumn fx:id="colPassword" prefWidth="173.0" text="Password" />
+            <TableColumn fx:id="colName" prefWidth="245.0" text="Name" />
+            <TableColumn fx:id="colContactNumber" minWidth="1.0" prefWidth="202.0" text="Contact Number" />
+            <TableColumn fx:id="colEmail" prefWidth="197.0" text="Email" />
+         </columns>
+      </TableView>
+      <AnchorPane layoutX="33.0" layoutY="129.0" prefHeight="255.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+         <children>
+            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="115.0" text="User Name">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="50.0" prefHeight="43.0" prefWidth="115.0" text="Password">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="115.0" text="Name">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="150.0" prefHeight="43.0" prefWidth="115.0" text="Contact Number">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="196.0" prefHeight="43.0" prefWidth="115.0" text="Email">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtFldPassword" layoutX="149.0" layoutY="56.0" prefHeight="35.0" prefWidth="398.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="txtFldName" layoutX="149.0" layoutY="104.0" prefHeight="35.0" prefWidth="398.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="txtFldContactNumber" layoutX="149.0" layoutY="155.0" prefHeight="35.0" prefWidth="398.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="txtFldEmail" layoutX="149.0" layoutY="201.0" prefHeight="35.0" prefWidth="398.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="txtFldUserName" layoutX="149.0" layoutY="8.0" prefHeight="35.0" prefWidth="398.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <Button fx:id="btnSave" layoutX="693.0" layoutY="17.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="SAVE" textFill="#ffc029">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnRefresh" layoutX="693.0" layoutY="75.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnUpdate" layoutX="693.0" layoutY="134.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="    UPDATE" textFill="#ffc029">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnDelete" layoutX="693.0" layoutY="195.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="   DELETE" textFill="#ffc029">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <FontAwesomeIcon fill="#ffc029" iconName="SAVE" layoutX="714.0" layoutY="46.0" size="2em" />
+            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="714.0" layoutY="104.0" size="2em" />
+            <FontAwesomeIcon fill="#ffc029" iconName="TRASH" layoutX="715.0" layoutY="223.0" size="2em" />
+            <FontAwesomeIcon fill="#ffc029" iconName="WRENCH" layoutX="713.0" layoutY="160.0" size="2em" />
+         </children>
+      </AnchorPane>
+      <TextField fx:id="txtFldSearchHere" layoutX="252.0" layoutY="405.0" onKeyReleased="#txtFldSearchHereOnAction" prefHeight="35.0" prefWidth="500.0" promptText="       Search Here">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <FontAwesomeIcon fill="#c3bfbf" iconName="SEARCH" layoutX="266.0" layoutY="427.0" />
+   </children>
 </AnchorPane>
