--- a/src/main/resources/view/DriverForm.fxml
+++ b/src/main/resources/view/DriverForm.fxml
@@ -21,7 +21,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <TableView fx:id="tblDrivers" layoutX="35.0" layoutY="454.0" onMouseClicked="#tblDriversOnAction" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
+      <TableView fx:id="tblDrivers" layoutX="35.0" layoutY="454.0" onMouseClicked="#tblDriversOnClicked" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
          <columns>
             <TableColumn fx:id="colNic" prefWidth="163.0" text="NIC" />
             <TableColumn fx:id="colName" prefWidth="191.0" text="Name" />
@@ -85,12 +85,12 @@
             </Button>
             <FontAwesomeIcon fill="#ffc029" iconName="SAVE" layoutX="734.0" layoutY="226.0" size="2em" />
             <FontAwesomeIcon fill="#ffc029" iconName="WRENCH" layoutX="733.0" layoutY="163.0" size="2em" />
-            <Label fx:id="txtFldAvailabilityStatus" layoutX="14.0" layoutY="149.0" prefHeight="43.0" prefWidth="145.0" text="Availability Status">
+            <Label layoutX="14.0" layoutY="149.0" prefHeight="43.0" prefWidth="145.0" text="Availability Status">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <ComboBox fx:id="cmbAvailabilityStatus" layoutX="179.0" layoutY="151.0" onAction="#cmbAvailabilityStatusOnAction" prefHeight="35.0" prefWidth="398.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
+            <ComboBox fx:id="cmbAvailabilityStatus" layoutX="179.0" layoutY="151.0" prefHeight="35.0" prefWidth="398.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
             <Button fx:id="btnRefresh" layoutX="713.0" layoutY="80.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
                <font>
                   <Font size="18.0" />
