--- a/src/main/resources/view/CreditsForm.fxml
+++ b/src/main/resources/view/CreditsForm.fxml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -26,5 +31,97 @@
             <TableColumn fx:id="colDueDate" prefWidth="197.0" text="Due Date" />
          </columns>
       </TableView>
+      <TextField fx:id="txtFldSearchHere" layoutX="272.0" layoutY="407.0" onKeyReleased="#txtFldSearchHereOnAction" prefHeight="35.0" prefWidth="500.0" promptText="       Search Here">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <FontAwesomeIcon fill="#c3bfbf" iconName="SEARCH" layoutX="285.0" layoutY="430.0" />
+      <AnchorPane layoutX="31.0" layoutY="128.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+         <children>
+            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Credit ID">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Total Amount">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="txtFldAvailabilityStatus" layoutX="14.0" layoutY="148.0" prefHeight="43.0" prefWidth="145.0" text="Amount Paid">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="cmbCustomerNIC" layoutX="162.0" layoutY="58.0" onAction="#cmbCustomerNICOnAction" prefHeight="35.0" prefWidth="236.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
+            <Label layoutX="14.0" layoutY="54.0" prefHeight="43.0" prefWidth="145.0" text="Customer NIC">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblCreditID" layoutX="162.0" layoutY="4.0" prefHeight="43.0" prefWidth="236.0" text="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="464.0" layoutY="54.0" prefHeight="43.0" prefWidth="145.0" text="Due Date">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="464.0" layoutY="9.0" prefHeight="43.0" prefWidth="145.0" text="Reservation ID">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="cmbReservationID" layoutX="615.0" layoutY="13.0" onAction="#cmbReservationIDOnAction" prefHeight="35.0" prefWidth="236.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
+            <Label fx:id="txtFldAvailabilityStatus1" layoutX="13.0" layoutY="197.0" prefHeight="43.0" prefWidth="145.0" text="Amount To Pay">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <DatePicker fx:id="txtDueDate" layoutX="615.0" layoutY="58.0" prefHeight="35.0" prefWidth="236.0" />
+            <TextField fx:id="txtFldTotalAmount" layoutX="162.0" layoutY="104.0" prefHeight="35.0" prefWidth="236.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="txtFldAmountPaid" layoutX="162.0" layoutY="152.0" prefHeight="35.0" prefWidth="236.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="txtFldAmountToPay" layoutX="162.0" layoutY="201.0" prefHeight="35.0" prefWidth="236.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+         </children>
+      </AnchorPane>
+      <Button fx:id="btnSave" layoutX="813.0" layoutY="337.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="SAVE" textFill="#ffc029">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnRefresh" layoutX="813.0" layoutY="275.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnUpdate" layoutX="613.0" layoutY="274.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="    UPDATE" textFill="#ffc029">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <FontAwesomeIcon fill="#ffc029" iconName="SAVE" layoutX="834.0" layoutY="366.0" size="2em" />
+      <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="834.0" layoutY="304.0" size="2em" />
+      <FontAwesomeIcon fill="#ffc029" iconName="WRENCH" layoutX="633.0" layoutY="300.0" size="2em" />
+      <Button fx:id="btnDelete" layoutX="613.0" layoutY="335.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="   DELETE" textFill="#ffc029">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <FontAwesomeIcon fill="#ffc029" iconName="TRASH" layoutX="635.0" layoutY="363.0" size="2em" />
    </children>
 </AnchorPane>
