--- a/src/main/resources/view/CreditsForm.fxml
+++ b/src/main/resources/view/CreditsForm.fxml
@@ -22,7 +22,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <TableView fx:id="tblCredits" layoutX="33.0" layoutY="457.0" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
+      <TableView fx:id="tblCredits" layoutX="33.0" layoutY="457.0" onMouseClicked="#tblCreditsOnClicked" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
          <columns>
             <TableColumn fx:id="colCreditID" prefWidth="160.0" text="Credit ID" />
             <TableColumn fx:id="colTotalAmount" prefWidth="207.0" text="Total Amount" />
@@ -37,7 +37,7 @@
          </font>
       </TextField>
       <FontAwesomeIcon fill="#c3bfbf" iconName="SEARCH" layoutX="285.0" layoutY="430.0" />
-      <AnchorPane layoutX="31.0" layoutY="128.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+      <AnchorPane layoutX="31.0" layoutY="128.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 10;">
          <children>
             <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Credit ID">
                <font>
@@ -49,7 +49,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="txtFldAvailabilityStatus" layoutX="14.0" layoutY="148.0" prefHeight="43.0" prefWidth="145.0" text="Amount Paid">
+            <Label layoutX="14.0" layoutY="148.0" prefHeight="43.0" prefWidth="145.0" text="Amount Paid">
                <font>
                   <Font size="14.0" />
                </font>
@@ -76,7 +76,7 @@
                </font>
             </Label>
             <ComboBox fx:id="cmbReservationID" layoutX="615.0" layoutY="13.0" onAction="#cmbReservationIDOnAction" prefHeight="35.0" prefWidth="236.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
-            <Label fx:id="txtFldAvailabilityStatus1" layoutX="13.0" layoutY="197.0" prefHeight="43.0" prefWidth="145.0" text="Amount To Pay">
+            <Label layoutX="13.0" layoutY="197.0" prefHeight="43.0" prefWidth="145.0" text="Amount To Pay">
                <font>
                   <Font size="14.0" />
                </font>
